--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/jest": "^25.1.4",
     "@types/jsonwebtoken": "^8.3.8",
     "@types/node": "^13.9.1",
+    "@types/uuid": "^7.0.2",
     "jest": "^25.2.6",
     "nodemon": "^2.0.2",
     "ts-jest": "^25.3.0",
@@ -33,7 +34,8 @@
     "pg": "^7.18.2",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^0.17.6",
-    "typeorm": "0.2.24"
+    "typeorm": "0.2.24",
+    "uuid": "^7.0.3"
   },
   "scripts": {
     "start": "ts-node-dev src/index.ts",
