--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.3",
+    "@types/faker": "^4.1.11",
     "@types/graphql": "^14.5.0",
     "@types/jest": "^25.1.4",
     "@types/jsonwebtoken": "^8.3.8",
@@ -27,6 +28,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "faker": "^4.1.0",
     "graphql": "^14.6.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
