--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/jest": "^25.1.4",
     "@types/jsonwebtoken": "^8.3.8",
     "@types/node": "^13.9.1",
+    "@types/numeral": "0.0.27",
     "@types/uuid": "^7.0.2",
     "jest": "^25.2.6",
     "nodemon": "^2.0.2",
@@ -32,6 +33,7 @@
     "graphql": "^14.6.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
+    "numeral": "^2.0.6",
     "ofx-js": "^0.1.1",
     "pg": "^7.18.2",
     "reflect-metadata": "^0.1.13",
