--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.3",
     "@types/faker": "^4.1.11",
     "@types/graphql": "^14.5.0",
